Fixes verse numbers not staying with initial words when the line breaks.

--- a/styles/base.css
+++ b/styles/base.css
@@ -312,7 +312,10 @@ text-indent: 0;
 
 .paragraph .verse {
     display: inline;
-    padding-left: 5px;
+}
+
+.paragraph .verse {
+    display: inline;
 }
 
 /* Serif fonts */
