--- a/styles/base.css
+++ b/styles/base.css
@@ -282,12 +282,16 @@ body {
 
 /* Drop caps for the first letter of a chapter */
 .first_verse:first-letter, .first_paragraph:first-letter {
-    /* FIXME: Capital J's can cover up part of characters in the third line of the first verse.  See 2 Kings 22:1 in a narrow window. */
-    font-size:		51px;
-    float:			left;
+    /* FIXME: Capital J's can cover up part of characters in the third line of the first verse.  (See 2 Kings 22:1 in a narrow window.) */
+    font-size: 51px;
+    float:     left;
+    
     /* Bold makes some letters better, especially P's. */
-    /* This fixes the spacing problem with some letters, like W, but not quite capital J's. */
-    margin-bottom:	-9px;
+    /* This fixes the spacing problem with some letters, like W, but not quite capital J's (see Psalm 43). */
+    margin-bottom: -9px;
+    
+    /* Ensure that the verse letter has the correct line height even if it is a divine word.  (See Psalm 3.) */
+    line-height: 19px!important;
 }
 
 /* Fixes a bug where the last word of the first verse sometimes wraps. */
