--- a/styles/base.css
+++ b/styles/base.css
@@ -204,10 +204,35 @@ body {
     opacity: .3;
 }
 
+.wrenchPadding {
+    padding: 1px 4px 4px 1px;
+    position: absolute;
+}
+
+.wrenchIcon {
+    
+    padding: 4px;
+    border: 1px solid transparent;
+    /* Remove the hideous selection rectangle when clicked. */
+    outline: 0;
+    
+    /* Fade out slightly when the mouse cursor moves off. */
+    /* Transition for Mozilla (Firefox 3.7+) */
+    -moz-transition-property:    opacity;
+    -moz-transition-duration:    0.3s;
+    /* Transition for WebKit */
+    -webkit-transition-property: opacity;
+    -webkit-transition-duration: 0.3s;
+    /* Transition for Opera 10.5+ */
+    -o-transition-property:      opacity;
+    -o-transition-duration:      0.3s;
+    opacity: .3;
+}
+
 /**
  * Fade in icon on hover.
  */
-.inputIcon:hover {
+.inputIcon:hover, .wrenchIcon:hover, .wrenchPadding:hover .wrenchIcon {
     /* Fade in slightly when the mouse cursor moves over. */
     /* Transition for Mozilla (Firefox 3.7+) */
     -moz-transition-property:    opacity;
@@ -219,6 +244,13 @@ body {
     -o-transition-property:      opacity;
     -o-transition-duration:      0.3s;
     opacity: .6;
+}
+
+.wrenchIcon:hover, .wrenchPadding:hover .wrenchIcon {
+    border: 1px solid #999;
+    -moz-border-radius: 6px;
+    -webkit-border-radius: 6px;
+    -o-border-radius: 6px;
 }
 
 /**
@@ -389,6 +421,7 @@ h2 {
 .q {
     color: #D00;
 }
+
 
 /* Highlighted found words from searches */
 .f1  {
