--- a/styles/base.css
+++ b/styles/base.css
@@ -112,8 +112,8 @@ body {
     max-width: 480px;
     min-width: 30px;
     /* NOTE: 100% width cannot be used because it extends off the page */
-    /*       80% is used because it is a good balance when the page is wide or narrow. */
-    width:     80%;
+    /*       70% is used because it is a good balance when the page is wide or narrow. */
+    width:     70%;
     
     /* Dim the text when not in focus (or hovering) so that it does not distract from the text. */
     /* Transition for Mozilla (Firefox 3.7+) */
@@ -136,8 +136,8 @@ body {
     border-bottom-color: #c3c3c3;
     border-right-color:  #cacaca;
     
-    /* The margin must be cleared for WebKit and Opera to move the icon close to the input box. */
-    margin-right: 0;
+    /* The margin balances moves the input box over a little so as not to cover the wrench icon. */
+    margin: 2px 30px;
     
     /* This removes the awful (non-rounded) selection rectangle that WebKit imposes. */
     outline: 0;
@@ -180,9 +180,14 @@ body {
 }
 
 
+.queryPadding {
+    padding: 8px;
+}
+
+
 .inputIcon {
     /* Move the icon over the right end of the input box. */
-    margin-left: -25px;
+    margin-left: -55px;
     /* Aligns the image in a somewhat cross-browser way. */
     vertical-align: bottom;
     /* Add padding so that the user does not have to click exactly on the icon to hit it. */
@@ -202,6 +207,8 @@ body {
     -o-transition-property:      opacity;
     -o-transition-duration:      0.3s;
     opacity: .3;
+    
+    position: absolute;
 }
 
 .wrenchPadding {
