--- a/styles/base.css
+++ b/styles/base.css
@@ -99,7 +99,7 @@ body {
     border-radius:         15px;
     
     /* Add slight gradient shadow to the top of the input box. */
-    /* NOTE: Opera has a glitch where the background extends past the rounded corners. */
+    /* NOTE: Opera and some WebKit based browsers (like some versions of the iPhone) have a glitch where the background extends past the rounded corners. */
     background: url('data:image/gif;base64,R0lGODlhAQADAKEDAN3d3eTk5PLy8v///yH5BAEKAAMALAAAAAABAAMAAAICRFQAOw==') top repeat-x rgba(255, 255, 255, .5);
     
     /* Padding is used to push the text away from the rounded corners */
@@ -117,24 +117,18 @@ body {
     
     /* Dim the text when not in focus (or hovering) so that it does not distract from the text. */
     /* Transition for Mozilla (Firefox 3.7+) */
-    -moz-transition-property:    color;
-    -moz-transition-duration:    0.3s;
+    -moz-transition:    color .3s ease, border-color .3s ease;
     /* Transition for WebKit */
-    -webkit-transition-property: color;
-    -webkit-transition-duration: 0.3s;
+    -webkit-transition: color .3s ease, border-color .3s ease;
     /* Transition for Opera 10.5+ */
-    -o-transition-property:      color;
-    -o-transition-duration:      0.3s;
+    -o-transition:      color .3s ease, border-color .3s ease;
     color: #a7a7a7;
     
     border-style: solid;
     border-width: 1px;
     
     /* This gives the input box a slight 3D effect. */
-    border-top-color:    #a7a7a7;
-    border-left-color:   #a1a19b;
-    border-bottom-color: #c3c3c3;
-    border-right-color:  #cacaca;
+    border-color: #a7a7a7 #cacaca #c3c3c3 #a1a19b;
     
     /* The margin balances moves the input box over a little so as not to cover the wrench icon. */
     margin: 2px 30px;
@@ -148,15 +142,6 @@ body {
  */
 .queryInput:hover {
     /* Darken the text so that it is more prominent. */
-    /* Transition for Mozilla (Firefox 3.7+) */
-    -moz-transition-property:    border-color;
-    -moz-transition-duration:    0.3s;
-    /* Transition for WebKit */
-    -webkit-transition-property: border-color;
-    -webkit-transition-duration: 0.3s;
-    /* Transition for Opera 10.5+ */
-    -o-transition-property:      border-color;
-    -o-transition-duration:      0.3s;
     border-color: #96968e;
 }
 
@@ -168,14 +153,11 @@ body {
     
     /* Darken the text so that it is more prominent. */
     /* Transition for Mozilla (Firefox 3.7+) */
-    -moz-transition-property:    color;
-    -moz-transition-duration:    0.3s;
+    -moz-transition:    color .3s ease;
     /* Transition for WebKit */
-    -webkit-transition-property: color;
-    -webkit-transition-duration: 0.3s;
+    -webkit-transition: color .3s ease;
     /* Transition for Opera 10.5+ */
-    -o-transition-property:      color;
-    -o-transition-duration:      0.3s;
+    -o-transition:      color .3s ease;
     color: #555;
 }
 
@@ -198,14 +180,11 @@ body {
     
     /* Fade out slightly when the mouse cursor moves off. */
     /* Transition for Mozilla (Firefox 3.7+) */
-    -moz-transition-property:    opacity;
-    -moz-transition-duration:    0.3s;
+    -moz-transition:    opacity .3s ease;
     /* Transition for WebKit */
-    -webkit-transition-property: opacity;
-    -webkit-transition-duration: 0.3s;
+    -webkit-transition: opacity .3s ease;
     /* Transition for Opera 10.5+ */
-    -o-transition-property:      opacity;
-    -o-transition-duration:      0.3s;
+    -o-transition:      opacity .3s ease;
     opacity: .3;
     
     position: absolute;
@@ -218,19 +197,34 @@ body {
     
     /* Use the hand cursor for the padded area, just like the button. */
     cursor: pointer;
+    
+    /* Fade this element in. */
+    /* TODO: Determine if there should be a separate class for CSS transition fade ins.. */
+    /* Transition for Mozilla (Firefox 3.7+) */
+    -moz-transition:    opacity 1s ease-in;
+    /* Transition for WebKit */
+    -webkit-transition: opacity 1s ease-in;
+    /* Transition for Opera 10.5+ */
+    -o-transition:      opacity 1s ease-in;
+    
+    opacity: 1;
 }
+
+
+/* This class is used for CSS transitions. */
+.transparent {
+    opacity: 0;
+}
+
 
 .wrenchIcon {
     /* Darken the text so that it is more prominent. */
     /* Transition for Mozilla (Firefox 3.7+) */
-    -moz-transition-property:    opacity, border-color;
-    -moz-transition-duration:    0.6s,    0.8s;
+    -moz-transition:    opacity .6s ease, border-color .6s ease;
     /* Transition for WebKit */
-    -webkit-transition-property: opacity, border-color;
-    -webkit-transition-duration: 0.6s,    0.8s;
+    -webkit-transition: opacity .6s ease, border-color .6s ease;
     /* Transition for Opera 10.5+ */
-    -o-transition-property:      opacity, border-color;
-    -o-transition-duration:      0.6s,    0.8s;
+    -o-transition:      opacity .6s ease, border-color .6s ease;
     
     /* A transparent border is needed because otherwise it would jump when the hover border appears. */
     border-color: transparent;
@@ -262,14 +256,11 @@ body {
 .wrenchIcon:hover, .wrenchPadding:hover .wrenchIcon {
     /* The speed of the border-color change is increased to make it fade in before the opacity is finished so that is looks smooth. */
     /* Transition for Mozilla (Firefox 3.7+) */
-    -moz-transition-property:    opacity, border-color;
-    -moz-transition-duration:    0.6s,    0.3s;
+    -moz-transition:    opacity .6s ease, border-color .3s ease;
     /* Transition for WebKit */
-    -webkit-transition-property: opacity, border-color;
-    -webkit-transition-duration: 0.6s,    0.3s;
+    -webkit-transition: opacity .6s ease, border-color .3s ease;
     /* Transition for Opera 10.5+ */
-    -o-transition-property:      opacity, border-color;
-    -o-transition-duration:      0.6s,    0.3s;
+    -o-transition:      opacity .6s ease, border-color .3s ease;
     border-color: #999;
 }
 
