--- a/styles/base.css
+++ b/styles/base.css
@@ -92,11 +92,9 @@ body {
 
 .queryInput {
     /* Rounded corners for Mozilla */
-    -moz-border-radius:    15px;
-    /* Rounded corners for WebKit */
-    -webkit-border-radius: 15px;
-    /* Rounded corners for Opera, IE 9+ */
-    border-radius:         15px;
+    -moz-border-radius: 15px;
+    /* Rounded corners for Opera 10.5+, IE 9+, WebKit 532.5+ (Chrome 4, Safari 5), Gecko 2 (Mozilla 4) */
+    border-radius:      15px;
     
     /* Add slight gradient shadow to the top of the input box. */
     /* NOTE: Opera and some WebKit based browsers (like some versions of the iPhone) have a glitch where the background extends past the rounded corners. */
@@ -235,10 +233,9 @@ body {
     /* Fade out slightly when the mouse cursor moves off. */
     opacity: .2;
     
-    -moz-border-radius:    6px;
-    -webkit-border-radius: 6px;
-    /* Rounded corners for Opera, IE 9+ */
-    border-radius:         6px;
+    -moz-border-radius: 6px;
+    /* Rounded corners for Opera 10.5+, IE 9+, WebKit 532.5+ (Chrome 4, Safari 5), Gecko 2 (Mozilla 4) */
+    border-radius:      6px;
     
     padding: 4px;
     
@@ -261,7 +258,29 @@ body {
     -webkit-transition: opacity .6s ease, border-color .3s ease;
     /* Transition for Opera 10.5+ */
     -o-transition:      opacity .6s ease, border-color .3s ease;
-    border-color: #999;
+    border-color: #777;
+}
+
+.contextMenu {
+    display:    none;
+    opacity:    0;
+    position:   fixed;
+    background: #FFF;
+    background: rgba(255, 255, 255, .9);
+    border:     #A3A3A3 1px solid;
+    padding:    3px;
+    
+    /* Transition for Mozilla (Firefox 3.7+) */
+    -moz-transition:    opacity .2s ease-in;
+    /* Transition for WebKit */
+    -webkit-transition: opacity .2s ease-in;
+    /* Transition for Opera 10.5+ */
+    -o-transition:      opacity .2s ease-in;
+    
+    /* Rounded corners for Mozilla */
+    -moz-border-radius: 3px;
+    /* Rounded corners for Opera 10.5+, IE 9+, WebKit 532.5+ (Chrome 4, Safari 5), Gecko 2 (Mozilla 4) */
+    border-radius:      3px;
 }
 
 /**
