--- a/styles/base.css
+++ b/styles/base.css
@@ -45,11 +45,12 @@ body {
 
 
 .topBars {
-    position:	fixed;
-    top:		0;
-    left:		0;
-    width:		100%;
-    height:		30px;
+    position: fixed;
+    top:      0;
+    left:     0;
+    width:    100%;
+    height:   30px;
+    z-index:  2;
 }
 
 .searchBars {
@@ -270,6 +271,7 @@ body {
     background: rgba(255, 255, 255, .9);
     border:     #A3A3A3 1px solid;
     padding:    3px;
+    z-index:    2;
     
     /* Transition for Mozilla (Firefox 4.0+) */
     -moz-transition:    opacity .2s ease-in;
@@ -302,6 +304,33 @@ body {
     /* Ensure that the cursor will look like a hand even if not hovering over the text. */
     cursor:     pointer;
 }
+
+
+.panel {
+    display:    none;
+    position:   fixed;
+    background: #FFF;
+    background: rgba(255, 255, 255, .9);
+    border:     #A3A3A3 1px solid;
+    padding:    3px;
+    
+    padding-top: 60px;
+    
+    /* Rounded corners for Mozilla */
+    -moz-border-radius: 3px;
+    /* Rounded corners for Opera 10.5+, IE 9+, WebKit 532.5+ (Chrome 4, Safari 5), Gecko 2 (Mozilla 4.0) */
+    border-radius:      3px;
+}
+
+.slide {
+    /* Transition for Mozilla (Firefox 4.0+) */
+    -moz-transition:    top .6s ease;
+    /* Transition for WebKit */
+    -webkit-transition: top .6s ease;
+    /* Transition for Opera 10.5+ */
+    -o-transition:      top .6s ease;
+}
+
 
 /**
  * Emulate button pressing.
