--- a/styles/base.css
+++ b/styles/base.css
@@ -361,13 +361,14 @@ body {
     /* Rounded corners for Opera 10.5+, IE 9+, WebKit 532.5+ (Chrome 4, Safari 5), Gecko 2 (Mozilla 4.0) */
     border-radius:      9px;
     
+    /* Add both a drop shadow and an inset shadow to give a slightly rounded effect.
     /* NOTE: IE has its own DropShadow filter that could be used. */
     /* Opera 10.5/Mozilla 4.0 */
-    box-shadow:         3px 3px 3px rgba(0, 0, 0, .3);
+    box-shadow:         3px 3px 3px rgba(0, 0, 0, .3), inset -1px 0 8px rgba(0, 0, 0, .2);
     /* Mozilla 3.5- */
-    -moz-box-shadow:    3px 3px 3px rgba(0, 0, 0, .3);
+    -moz-box-shadow:    3px 3px 3px rgba(0, 0, 0, .3), inset -1px 0 8px rgba(0, 0, 0, .2);
     /* WebKit 522 (Chrome, Safari 3) */
-    -webkit-box-shadow: 3px 3px 3px rgba(0, 0, 0, .3);
+    -webkit-box-shadow: 3px 3px 3px rgba(0, 0, 0, .3), inset -1px 0 8px rgba(0, 0, 0, .2);
 }
 
 .slide {
