--- a/styles/base.css
+++ b/styles/base.css
@@ -60,7 +60,7 @@ body {
     background:	rgba(255, 255, 255, .9);
     /* TODO: Determine if gradients increase CPU usage significantly? */
     /* Transparent white gradient for Firefox 3.6+ */
-    background:	-moz-linear-gradient(top, rgba(255, 255, 255, .98), rgba(255, 255, 255, .93) 25%, rgba(255, 255, 255, .9));
+    background:	-moz-linear-gradient(rgba(255, 255, 255, .98), rgba(255, 255, 255, .93) 25%, rgba(255, 255, 255, .9));
     /* Transparent white gradient for WebKit */
     background:	-webkit-gradient(linear, left top, left bottom, color-stop(0, rgba(255, 255, 255, .96)), color-stop(.25, rgba(255, 255, 255, .92)), color-stop(1, rgba(255, 255, 255, .9)));
     width:		100%;
