Added a button to close the panel.

--- a/styles/base.css
+++ b/styles/base.css
@@ -179,6 +179,11 @@ body {
 }
 
 
+.panel .done_button {
+    float: right;
+}
+
+
 .inputIcon {
     /* Move the icon over the right end of the input box. */
     margin-left: -55px;
