--- a/styles/base.css
+++ b/styles/base.css
@@ -114,7 +114,6 @@ body {
     /* NOTE: 100% width cannot be used because it extends off the page */
     /*       70% is used because it is a good balance when the page is wide or narrow. */
     width:     70%;
-    
     height:    18px;
     
     /* Dim the text when not in focus (or hovering) so that it does not distract from the text. */
@@ -408,12 +407,12 @@ button {
    border-radius:      4px;
    -moz-border-radius: 4px;
    
-   background-color: #DDEEF6;
+   background-color: rgba(221, 238, 246, .3);
    
    /* Opera 10.5/Mozilla 4.0 */
-   box-shadow:         inset 0 1px 3px #FFF, inset 0 -15px 1px #CBE6F2, 0 0 3px #8EC1DA;
-   -webkit-box-shadow: inset 0 1px 3px #FFF, inset 0 -15px 1px #CBE6F2, 0 0 3px #8EC1DA;
-   -moz-box-shadow:    inset 0 1px 3px #FFF, inset 0 -15px 1px #CBE6F2, 0 0 3px #8EC1DA;
+   box-shadow:         inset 0 1px 3px rgba(255, 255, 255, .3), inset 0 -15px 1px rgba(203, 230, 242, .3), 0 0 3px rgba(142, 193, 218, .3);
+   -webkit-box-shadow: inset 0 1px 3px rgba(255, 255, 255, .3), inset 0 -15px 1px rgba(203, 230, 242, .3), 0 0 3px rgba(142, 193, 218, .3);
+   -moz-box-shadow:    inset 0 1px 3px rgba(255, 255, 255, .3), inset 0 -15px 1px rgba(203, 230, 242, .3), 0 0 3px rgba(142, 193, 218, .3);
    
    color:       #3985A8;
    text-shadow: 0 1px #FFF;
@@ -437,7 +436,7 @@ button {
  */
 button:active {
     padding: 6px 13px 4px 15px;
-    background-color: #C6E7F6;
+    background-color: #E1E1FF;
 }
 
 /* Remove the ugly dashed border on the text of buttons in Mozilla when clicked. */
