--- a/styles/base.css
+++ b/styles/base.css
@@ -209,22 +209,13 @@ body {
     /* Use the hand cursor for the padded area, just like the button. */
     cursor: pointer;
     
-    /* Fade this element in. */
-    /* TODO: Determine if there should be a separate class for CSS transition fade ins.. */
+    /* TODO: Determine if there should be a separate class for CSS transition fade ins. */
     /* Transition for Mozilla (Firefox 4.0+) */
     -moz-transition:    opacity 1s ease-in;
     /* Transition for WebKit */
     -webkit-transition: opacity 1s ease-in;
     /* Transition for Opera 10.5+ */
     -o-transition:      opacity 1s ease-in;
-    
-    opacity: 1;
-}
-
-
-/* This class is used for CSS transitions. */
-.transparent {
-    opacity: 0;
 }
 
 
@@ -283,6 +274,7 @@ body {
     /* Transition for WebKit */
     -webkit-transition: opacity .6s ease, border-color .3s ease;
     /* Transition for Opera 10.5+ */
+    /* BUG: The border-color does not fade out on Opera (tested on 10.63). */ 
     -o-transition:      opacity .6s ease, border-color .3s ease;
     border-color: #777;
 }
