--- a/styles/base.css
+++ b/styles/base.css
@@ -369,6 +369,19 @@ body {
     -webkit-box-shadow: 3px 3px 3px rgba(0, 0, 0, .3), inset -1px 0 8px rgba(0, 0, 0, .2);
 }
 
+
+.panel a {
+    color: #3985A8;
+    
+    text-decoration: none;
+}
+
+.panel a:hover {
+    /* TODO: Do something better. */
+    text-decoration: underline;
+}
+
+
 .slide {
     /* Transition for Mozilla (Firefox 4.0+) */
     -moz-transition:    top .6s ease;
