Added a hand cursor to all words in the text.
Had to modify the cursor hiding code accordingly.  It would be nice to find
a solution that did not involve modifying the CSS.

--- a/styles/base.css
+++ b/styles/base.css
@@ -490,6 +490,10 @@ label {
     cursor: pointer;
 }
 
+/*NOTE: This style is changed dynamically to hide and show the cursor. */
+.verse a, .search_verse a, .first_verse a, .psalm_title a {
+    cursor: pointer;
+}
 
 /* Verses created from a search. */
 .search_verse {
