--- a/styles/base.css
+++ b/styles/base.css
@@ -520,6 +520,7 @@ label {
 .subscription {
     /* Add indentation on both sides and insert a single blank line between the text and the subscription. */
     /*NOTE: Padding should always be used for verses instead of margin because it can interfere with determining the verse range. */
+    /*FIXME: Because of the top padding, when looking up a subscription, the text is scrolled to the blank line above the text. */
     padding: 19px 2em 0 2em;
 }
 
