Added support for cursor hiding over Pauline subscriptions.
The need to modify the JavaScript so quickly because of a small change in
the CSS illustrates why this solution is far from optimal.  Therefore, the
verbiage of the note has been strengthened from TODO to FIXME.

--- a/styles/base.css
+++ b/styles/base.css
@@ -491,7 +491,7 @@ label {
 }
 
 /*NOTE: This style is changed dynamically to hide and show the cursor. */
-.verse a, .search_verse a, .first_verse a, .psalm_title a {
+.verse a, .search_verse a, .first_verse a, .psalm_title a, .subscription a {
     cursor: pointer;
 }
 
