Make Ajax loader graphics transparent so that they are not so distracting.

--- a/styles/base.css
+++ b/styles/base.css
@@ -485,6 +485,7 @@ button::-moz-focus-inner {
     width:      100%;
     background: url("../images/loader.gif") no-repeat center;
     visibility: hidden;
+    opacity:    .5;
 }
 
 
